--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
 /* 
     General Styles
 */
+
+.jumbotron{
+    background-image: url('https://totenart.com/tutoriales/wp-content/uploads/2017/05/vinho_na_tela_4.jpg');
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.navbar{
+    background-color: black;
+}
+
+.img-autor{
+    border: 4px solid #cfa006;
+	border-radius: 50%;
+}
+
