--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,9 +5,10 @@ html{
     scroll-behavior: smooth;
 }
 .jumbotron{
-    background-image: url('https://totenart.com/tutoriales/wp-content/uploads/2017/05/vinho_na_tela_4.jpg');
+    background-image: url('https://i2.wp.com/www.lja.mx/wp-content/uploads/2016/07/ArtesPlasticas.jpeg?fit=2880%2C1800&ssl=1');
 	background-repeat: no-repeat;
-	background-size: 100%;
+    background-size: 100%;
+    height: 280px;
 }
 .navbar{
     background-color: black;
@@ -44,4 +45,8 @@ body{
 .curriculum-body{
     background-color: #fff;
     color: black;
+}
+.name{
+    font-family: 'Architects Daughter', cursive;
+    color: #000;
 }
