--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,6 +43,7 @@ body{
     color:#cfa006;
     padding-left: 67px;
     font-size: 29px;
+    font-family: 'Architects Daughter', cursive;
 }
 .curriculum-body{
     /* background-color: #fff; */
@@ -52,6 +53,9 @@ body{
     font-family: 'Architects Daughter', cursive;
     color: #000;
 
+}
+a{
+    font-family: 'Architects Daughter', cursive;
 }
 
 /* .overlay {
@@ -84,33 +88,38 @@ body{
       background-color: #000;
   }
   .obras-menu{
-      width: 200px;
+      width: 181px;
       background-color: #000;
       /* padding: 12px; */
       color: #cfa006;
       border: 2px solid #cfa006;
       border-left: none !important;
       margin-left: -58px;
-      padding-top: 5px;
+      padding-top: 1px;
+      border-radius: 25px;
   }
 
   .proyecto-menu{
-      width: 200px;
+      width: 235px;
       background-color: #000;
       /* padding: 12px; */
       color: #cfa006;
       border: 2px solid #cfa006;
       border-left: none !important;
       margin-left: -58px;
-      padding-top: 5px;
+      padding-top: 1px;
+      border-radius: 25px;
+      padding-bottom: 9px;
   }
   .curriculum-menu{
-      width: 200px;
+      width: 241px;
       background-color: #000;
       /* padding: 12px; */
       color: #cfa006;
       border: 2px solid #cfa006;
       border-left: none !important;
       margin-left: -58px;
-      padding-top: 5px;
+      padding-top: 1px;
+      border-radius: 25px;
+      /* padding-bottom: 4px; */
   }
