--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,29 +58,29 @@ a{
     font-family: 'Architects Daughter', cursive;
 }
 
-/* .overlay {
+.overlay {
     position: absolute;
-    bottom: 0;
-    background: rgb(0, 0, 0);
+    bottom: 29px;
+    background: black;
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
-    width: 100%;
+    width: 93%;
     transition: .5s ease;
-    opacity:0;
-    color: white;
-    font-size: 20px;
-    padding: 20px;
+    opacity: 0;
+    /* color: white; */
+    font-size: 13px;
+    padding: 16px;
     text-align: center;
   }
 
-  .container:hover .overlay {
+  .img:hover .overlay {
     opacity: 1;
-  } */
+  }
 
 
   .zoom:hover{
-    -ms-transform: scale(1.3); /* IE 9 */
-    -webkit-transform: scale(1.3); /* Safari 3-8 */
+    -ms-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
     transform: scale(1.3);
     z-index: 1000;
   }
@@ -123,3 +123,4 @@ a{
       border-radius: 25px;
       /* padding-bottom: 4px; */
   }
+
