--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,7 +50,8 @@ body{
     color: #fff;
 }
 .name{
-    font-family: 'Architects Daughter', cursive;
+    /* font-family: 'Architects Daughter', cursive; */
+    font-family: 'Rock Salt', cursive;
     color: #000;
 
 }
