--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,11 +11,11 @@ html{
     height: 280px;
 }
 .navbar{
-    background-color: black;
-    color: #ffffff;
+    background-color: #f2b611;
+    color: #000;
 }
 .nav-link{
-    color: #fff;
+    color: #000;
     text-decoration: none !important;
 }
 .nav-img{
@@ -23,7 +23,7 @@ html{
     border: 2px solid #f2b611;
 }
 .nav-link:hover{
-    color: orange;
+    color: #fff;
 }
 .img-autor{
     border: 4px solid #cfa006;
@@ -128,3 +128,6 @@ a{
       /* padding-bottom: 4px; */
   }
 
+.line{
+    border-bottom: 2px solid #cfa006;
+}
